--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^1.15.2",
+     "body-parser": "^1.15.2",
     "dotenv": "^8.2.0",
     "express": "^4.12.4",
-    "mongoose": "^5.11.15"
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.2"
   },
   "repository": {
     "type": "git",
